# textprep

./: LICENCE  OOP.ipynb  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: OOP-checkpoint.ipynb
textprep/: __init__.py  helper.py  regex.py  text_prepreprocssing.py  textprep.py
